# get-physics-done

./: PROGRESS.md  README.md  pyproject.toml
.claude/hooks/: statusline.py
discussion_notes/: borrowable-components-report.md  llm-reliability-research-vs-learning.md  research-reports.md  tldr-report.md
infra/: gpd-learning.json
src/gpd/: registry.py
src/gpd/agents/: gpd-mastery-assessor.md  gpd-tutor.md
src/gpd/commands/: learn.md
src/gpd/core/: config.py  errors.py  learning.py
src/gpd/mcp/: builtin_servers.py
src/gpd/mcp/servers/: __init__.py  learning_server.py
src/gpd/specs/workflows/: explain.md  learn.md  set-profile.md
tasks/: lessons.md  todo.md
tests/: README.md  repo_graph_contract.json  test_cli_commands.py  test_metadata_consistency.py
tests/core/: test_prompt_wiring.py
tests/mcp/: test_learning_server.py
